<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">个人理财小助手</string>
    <string name="menu_settings">Settings</string>
    <string name="system_login">系统登录</string>
    <string name="option_view_icon_description">选项图标</string>
    <string name="back">返回</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="edit">修改</string>
    <string name="SystemConfiguration_edit_title">密码修改</string>
    <string name="SystemConfiguration_edit_oldPassword">请输入旧密码</string>
    <string name="SystemConfiguration_edit_newPassword">请输入新密码</string>
    <string name="SystemConfiguration_edit_hint_newPassword">请再次输入新密码</string>
    <string name="login">登录</string>
    <string name="income_money">金 额:</string>
    <string name="income_title">新增收入</string>
    <string name="income_time">时 间:</string>
    <string name="income_type">类 别:</string>
    <string name="income_note">备 注:</string>
    <string name="income_payer">支付人:</string>
    <string name="outcome_title">新增支出</string>
    <string name="type_option_1">信用卡</string>
    <string name="type_option_2">现金</string>
    <string name="income_set_date">设置时间</string>
    <string name="outcome_money">金 额:</string>
    <string name="outcome_place">地点</string>
    <string name="outcome_note">备注</string>
    <string name="income">收入</string>
    <string name="outcome">支出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_year">请输入年份</string>
    <string name="search_title">查询数据</string>
    <string name="search_month">请输入月份</string>
    <string name="search_day">请输入天</string>
    <string name="search_by_month">月</string>
    <string name="search_by_year">年</string>
    <string name="search_by_day">天</string>
    <string name="search">查询</string>
    <string name="enter_password">请输入密码:</string>

</resources>