<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/search_global_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_title"
        android:textColor="@color/black_900"
        android:layout_gravity="center_horizontal"
        android:textSize="40sp" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_year"
                    android:inputType="number"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_month"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_month"
                    android:inputType="number"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/search_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_day"
                    android:inputType="number"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <RadioButton
                    android:id="@+id/radio_button_search_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/income"
                    android:textColor="@color/black_800" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outcome"
                    android:textColor="@color/black_800"/>

            </RadioGroup>

            <RadioGroup
                android:id="@+id/search_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_button_search_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/search_by_year"
                    android:textColor="@color/black_800"/>


                <RadioButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/radio_button_search_month"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by_month"
                    android:textColor="@color/black_800"/>

                <RadioButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/radio_button_search_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search_by_day"
                    android:textColor="@color/black_800"/>

            </RadioGroup>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>








    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/search"
            app:layout_constraintEnd_toStartOf="@+id/vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <Button
            android:layout_marginStart="40dp"
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vertical"
            app:layout_constraintTop_toBottomOf="@+id/card" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/data_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

<!--        <View-->
<!--            android:id="@+id/search_result"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:tag="1">-->

<!--        </View>-->


    </ScrollView>








</LinearLayout>
