<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outcome_title"
        android:textColor="@color/black_900"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/outcome_amounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/outcome_money"
                    android:inputType="number"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/outcome_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/outcome_place"
                    android:inputType="textAutoComplete"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/outcome_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/outcome_note"
                    android:inputType="text"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_marginVertical="15dp"
                android:id="@+id/set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_set_date"
                app:icon="@drawable/ic_add_on_secondary_24dp"
                android:layout_gravity="center"/>


            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_button_outcome_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/type_option_1"
                    android:textColor="@color/black_800"/>


                <RadioButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/radio_button_outcome_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_option_2"
                    android:textColor="@color/black_800"/>

            </RadioGroup>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>








    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />



    <Button
        android:id="@+id/button_outcome_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical"
        app:layout_constraintTop_toBottomOf="@+id/card" />






</androidx.constraintlayout.widget.ConstraintLayout>
