<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ancestor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/new_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/income_title"
        android:textColor="@color/black_900"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/income_money_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/income_money"
                    android:inputType="number"
                    android:textColor="@color/black_900"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/income_note_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/income_note"
                    android:textColor="@color/black_900"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/income_payer_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/income_payer"
                    android:textColor="@color/black_900"
                    android:inputType="textAutoComplete"/>


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:layout_marginVertical="15dp"
                android:id="@+id/set_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_set_date"
                app:icon="@drawable/ic_add_on_secondary_24dp"
                android:layout_gravity="center"/>

            <RadioGroup
                android:id="@+id/type_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_button_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/type_option_1"
                    android:textColor="@color/black_800"/>


                <RadioButton
                    android:layout_marginStart="20dp"
                    android:id="@+id/radio_button_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_option_2"
                    android:textColor="@color/black_800"/>

            </RadioGroup>


        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_income_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/guideline_01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />


    <Button
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_01"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_02"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_percent="0.2"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_03"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_percent="0.3"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_04"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_percent="0.4"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_05"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_percent="0.5"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->

    <!--    <androidx.constraintlayout.widget.Guideline-->
    <!--        android:id="@+id/guideline_06"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:orientation="horizontal"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintGuide_percent="0.6"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>


