<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/system_configuration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/new_income_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SystemConfiguration_edit_title"
        android:textColor="@color/black_900"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_old"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SystemConfiguration_edit_oldPassword"
                    android:inputType="numberPassword"
                    android:textColor="@color/black_900"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_new"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SystemConfiguration_edit_newPassword"
                    android:inputType="numberPassword"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                app:layout_constraintVertical_bias="0.608">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_new_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/SystemConfiguration_edit_hint_newPassword"
                    android:inputType="numberPassword"
                    android:textColor="@color/black_900" />


            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>





    <Button
        app:layout_goneMarginTop="10dp"
        android:id="@+id/button_password_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toStartOf="@+id/vertical"
        app:layout_constraintHorizontal_bias="0.601"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_5" />

    <Button
        android:id="@+id/cancel_button"
        app:layout_goneMarginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_5" />




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />





</androidx.constraintlayout.widget.ConstraintLayout>


